--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "go",
             "request": "launch",
             "mode": "debug",
-            "program": "cmd/server/main.go"
+            "program": "src/cmd/server/main.go"
         }
         
 
