fix clean boxPool and rabbit service

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672/
 TESTCASES_PATH=/home/sam/project/github/isolate-wrapper/test/testcases
+CLIENT_RESULT=http://localhost:8085/submit
+PARALLEL_PROCESS=2
